# git2local

./: .env.example  .gitignore  README.md  git2local  odoo_api.py  odoo_query_server.py  pyproject.toml  requirements.txt  serve_reports.py  start_ear_server.sh  test_speech_queries.sh
.claude/commands/: crunch.md
docs/: INSTALL.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  SERVER.md  SPEECH_QUERY_README.md
ear/: README.md  main.py
ear/models/: activity.py  config.py  ticket.py
ear/services/: github_service.py  odoo_service.py
ear/templates/: speech.js
ear/utils/: date_helpers.py  query_parser.py  text_processing.py
reports/: EAR_2025-10-06.html
templates/: speech.css  speech_button.html  speech_modal.html
